# landmark-py

./: .cirrus.yml  .gitignore  .pythranrc  LICENSE  README.md  meson.build  pyproject.toml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  wheels.yml
.mesonpy-m1t2o5ic/: meson-python-native-file.ini
.mesonpy-m1t2o5ic/meson-logs/: meson-log.txt
docs/: get_include.html  greedy_perm.html  index.html  index.qmd.html  k_center.landmarks.html  landmarks.html  search.json  shapes.html  styles.scss
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
docs/src/: _quarto.yml  index.qmd
docs/src/.quarto/idx/: index.qmd.json
docs/src/.quarto/xref/: INDEX  bbd39553
docs_src/: _quarto.yml  get_include.qmd  greedy_perm.qmd  index.qmd  k_center.landmarks.qmd  landmarks.qmd  objects.json  shapes.qmd  styles.css
include/: prefix_sum.h
notebooks/: benchmark.py  bokeh_animation.py  greedytree.py  k_center.py  lidar.py  progressive_image.py  xyz_reduced.npz
src/landmark/: __init__.py  __version__.py  _maxmin.cpp  datasets.py  k_center.py  maxmin.py  meson.build  predicates.py
src/skpackage/: __init__.py  _prefixsum.cpp  meson.build
tests/: test_landmarks.py  test_package.py
