[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'wheel', 'ninja', 'numpy', 'pybind11']

[project]
name = "skpackage"
version = '0.0.2'
readme = "README.md"
classifiers = [
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3"
]
authors = [
	{ name = "Your Name", email = "my.email@email.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy"
]
license = {file = "LICENSE"}
include = [
	{ path = "skpackage/**/*.so", format = "wheel" },
	{ path = "skpackage/**/*.pyd", format = "wheel" },
]

[tool.meson-python.args]
setup = ['--default-library=static']