[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'wheel', 'ninja', 'numpy', 'pybind11']

[project]
name = "landmark"
version = '0.0.1'
readme = "README.md"
classifiers = [
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3"
]
authors = [
	{ name = "Your Name", email = "my.email@email.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy"
]
license = {file = "LICENSE"}
include = [
	{ path = "landmark/**/*.so", format = "wheel" },
	{ path = "landmark/**/*.pyd", format = "wheel" },
]

[project.optional-dependencies]
test = ["scipy"]

[tool.meson-python.args]
setup = ['--default-library=static']

[tool.cibuildwheel]
before-test = "python -m pip install scipy"
