[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'wheel', 'ninja', 'numpy', 'pybind11']

[project]
name = "landmark"
version = '0.0.3'
readme = "README.md"
classifiers = [
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3"
]
authors = [
	{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy"
]
license = {file = "LICENSE"}
include = [
	{ path = "landmark/**/*.so", format = "wheel" },
	{ path = "landmark/**/*.pyd", format = "wheel" },
]

[project.optional-dependencies]
test = ["scipy"]

[tool.meson-python.args]
setup = ['--default-library=static']

[tool.coverage.report]
omit = ["__*.py"]

[tool.cibuildwheel]
before-test = "python -m pip install scipy"

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["D", "E4", "E7", "E9", "F"]
ignore = ["D206"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint.pydocstyle]
convention = "google"